--- a/relogio-digital/css/style.css
+++ b/relogio-digital/css/style.css
@@ -9,9 +9,25 @@ font-family: 'Open Sans' sans-serif;
 
 body{
 height: 100vh;
-background: linear-gradient(120deg, #ffe53bd8,#ff2525ba);
+background: linear-gradient(120deg, #ffe53bd8,#950f0fba);
 display: flex;
 align-items: center;
 justify-content: center;
+
+}
+
+.relogio {
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 200px;
+    width: 550px;
+    background: transparent;
+    border-radius: 3px;
+    box-shadow: 0px 8px 10px rgba
+
+}
+
 
 }
