--- a/relogio-digital/css/style.css
+++ b/relogio-digital/css/style.css
@@ -1,13 +1,13 @@
-{@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;1,300;1,500&display=swap');}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;1,300;1,500&display=swap');
 
-*{
+* {
 margin: 0;
 padding:0 ;
 font-family: 'Open Sans' sans-serif;
 
 }
 
-body{
+body {
 height: 100vh;
 background: linear-gradient(120deg, #ffe53bd8,#950f0fba);
 display: flex;
@@ -17,17 +17,38 @@ justify-content: center;
 }
 
 .relogio {
+display: flex;
+align-items: center;
+justify-content: space-around;
+height: 200px;
+width: 550px;
+background: transparent;
+border-radius: 3px;
+box-shadow: 0px 8px 10px rgba(0, 0, 0, .5);
 
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 200px;
-    width: 550px;
-    background: transparent;
-    border-radius: 3px;
-    box-shadow: 0px 8px 10px rgba
-
+   
 }
 
+.relogio div{
+    height: 170px;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 60px;
+    color: fff #eee8e8;
+    background: rgba(5, 5, 0.9, alpha);
+    box-shadow: 5px 5px 15px rgba(0 , 0, 0, 0.7);
+    border-radius:  7px;
+    letter-spacing: 3px;
+}
 
+.relogio span {
+    font-weight: bolder;
+    font-size: 60px;
+}
+
+.relogio span.tempo {
+    font-size: 10px;
 }
